--- a/Dasmoto/resources/css/index.css
+++ b/Dasmoto/resources/css/index.css
@@ -2,34 +2,31 @@ body {
   font-family: Helvetica;
 }
 
-.header {
+h1 {
   font-family: Helvetica;
   font-size: 100px;
   font-weight: bold;
   color: khaki;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg");
+  background-image: url("resources/pattern.jpeg");
   text-align: center;
+}
+
+.para {
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
 }
 
 .brushes {
   background-color: mediumspringgreen;
-  font-size: 32px;
-  font-weight: bold;
-  color: white;
 }
 
 .frames {
   background-color: lightcoral;
-  font-size: 32px;
-  font-weight: bold;
-  color: white;
 }
 
 .paint {
   background-color: skyblue;
-  font-size: 32px;
-  font-weight: bold;
-  color: white;
 }
 
 .highlight {
